removes unnecessary dependencies